tests/instantiating/invalid/single_element_in_group_status/bus.fbd
main bus
	s status
		groups = ["a"]
